--- a/src/components/search-bar/_search-bar.scss
+++ b/src/components/search-bar/_search-bar.scss
@@ -1,14 +1,36 @@
 .search-bar {
-    // Vars
+    input {
+        width: 100%;
+        height: 50px;
+        float: left;
+        color: #fff;
+        font-size: 15px;
+        font-weight: 400;
+        text-indent: 18px;
+        padding: 0 60px 0 0;
+        background: rgba(255, 255, 255, 0.2);
+        border-radius: 5px 25px 25px 5px;
+        border: 0px;
+        box-shadow: none;
+        outline: none;
 
-    // Support
-
-    // Module
-    & {
-        //
+        -webkit-appearance: none;
+        -moz-appearance: none;
     }
 
-    // Facets
+    input::-webkit-input-placeholder {
+        color: rgba(255, 255, 255, 0.75);
+    }
 
-    // States
+    header input:-moz-input-placeholder {
+        color: rgba(255, 255, 255, 0.75);
+    }
+
+    input::-moz-input-placeholder {
+        color: rgba(255, 255, 255, 0.75);
+    }
+
+    input:-ms-input-placeholder {
+        color: rgba(255, 255, 255, 0.75);
+    }
 }
